--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
-streamlit==1.35.0
-pandas==2.2.2
-scikit-learn==1.4.2
-joblib==1.4.2
-numpy==1.26.4
-
-These are compatible with Python 3.10+
+streamlit
+scikit-learn
+pandas
+joblib
